--- a/app/views/dropblog/articles/_form.html.haml
+++ b/app/views/dropblog/articles/_form.html.haml
@@ -7,6 +7,7 @@
   = f.input :blog, :collection => Dropblog::Engine.config.blogs
   = f.input :title
   = f.input :permalink
+  = f.input :tag_list
   = f.input :body
   = f.input :excerpt
   = f.input :published_at
