--- a/app/views/dropblog/articles/feed.xml.haml
+++ b/app/views/dropblog/articles/feed.xml.haml
@@ -1,18 +1,19 @@
 !!! XML
 %feed{ :xmlns => "http://www.w3.org/2005/Atom" }
 
-  %title= @settings[:title]
-  %link= url('/')
-  %description= @settings[:site_description]
-  %updated= @articles.first.posted_at.rfc3339
-  %generator= Blogly::PROJECT_URL
-  <atom:link href="#{url('/feed')}" rel="self" type="application/rss+xml" />
+  %title= Dropblog::Engine.config.title
+  %link= blog_permalink_path(:blog => params[:blog])
+  %description= Dropblog::Engine.config.description
+  %updated= @articles.first.published_at.rfc3339
+  %generator
+    http://github.com/mikelaurence/dropblog 
+  <atom:link href="#{params[:url]}" rel="self" type="application/rss+xml" />
 
   - @articles.each do |article|
     %entry
       %title= article.title
-      %link= url(article.url)
-      %id= article.url
-      %updated= article.posted_at.rfc3339
+      %link= article_path article
+      %id= article_path article
+      %updated= article.published_at.rfc3339
       %content{ :type => 'xhtml' }
         = article.html
