--- a/app/views/dropblog/articles/feed.xml.haml
+++ b/app/views/dropblog/articles/feed.xml.haml
@@ -1,4 +1,4 @@
-!!! XML
+<?xml version="1.0" encoding="utf-8"?>
 %feed{ :xmlns => "http://www.w3.org/2005/Atom" }
 
   %title= Dropblog::Engine.config.title
@@ -7,7 +7,7 @@
   %updated= @articles.first.published_at.rfc3339
   %generator
     http://github.com/mikelaurence/dropblog 
-  <atom:link href="#{blog_permalink_url(:blog => params[:blog], :format => :xml)}" rel="self" type="application/rss+xml" />
+  <link rel="self" type="application/atom+xml" href="#{blog_permalink_url(:blog => params[:blog], :format => :xml)}" />
 
   - @articles.each do |article|
     %entry
