--- a/app/views/dropblog/articles/feed.xml.haml
+++ b/app/views/dropblog/articles/feed.xml.haml
@@ -2,12 +2,12 @@
 %feed{ :xmlns => "http://www.w3.org/2005/Atom" }
 
   %title= Dropblog::Engine.config.title
-  %link= blog_permalink_url(:blog => params[:blog])
+  %link= blog_permalink_url(:blog => @blog)
   %description= Dropblog::Engine.config.description
   %updated= @articles.first.published_at.rfc3339
   %generator
     http://github.com/mikelaurence/dropblog 
-  <link rel="self" type="application/atom+xml" href="#{blog_permalink_url(:blog => params[:blog], :format => :xml)}" />
+  <link rel="self" type="application/atom+xml" href="#{blog_permalink_url(:blog => @blog, :format => :xml)}" />
 
   - @articles.each do |article|
     %entry
