--- a/app/views/dropblog/articles/_header.html.haml
+++ b/app/views/dropblog/articles/_header.html.haml
@@ -1,6 +1,6 @@
 %header.articles
   %h1
-    = link_to 'Blog', dropblog_permalink_path(:blog => @blog)
+    = link_to Dropblog::Engine.config.title, dropblog_permalink_path(:blog => @blog)
   %h6
     powered by
     = link_to 'dropblog', 'http://github.com/mikelaurence/dropblog'
